Customizing deployment part 1.

--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -41,7 +41,7 @@ bindsym XF86Calculator exec gnome-calculator
 bindsym XF86Mail exec evolution
 
 ## Launch // Browser // <XF86HomePage> ##
-bindsym XF86HomePage exec firefox
+bindsym XF86HomePage exec brave
 
 # Launch // ? // <XF86Search>
 #bindsym XF86Search exec
