--- a/config/sway/sway.d/03_workspace.conf
+++ b/config/sway/sway.d/03_workspace.conf
@@ -1,23 +1,18 @@
 # Define names for workspaces
 set $ws1 "1:   Mail "
-set $ws2 "2:   Terminal "
-set $ws3 "3:   Firefox "
-set $ws4 "4:   Code "
-set $ws5 "5:   Files "
-set $ws6 "6:   Media "
-set $ws7 "7:   Design "
+set $ws2 "2:   Chat "
+set $ws3 "3:   Terminal "
+set $ws4 "4:   Terminal "
+set $ws5 "5:   Terminal "
+set $ws6 "6:   Code "
+set $ws7 "7:   Brave"
 set $ws8 "8:   Chat "
-set $ws9 "9:   General "
-set $ws10 "10:   Settings "
+set $ws9 "9:   Music"
+set $ws10 "10:   Calendar"
 
 # assign program to workspace
-assign [class="Firefox"] → $ws3
-assign [class="firefox"] → $ws3
-assign [app_id="firefox"] → $ws3
-assign [class="Thunderbird"] → $ws1
-assign [app_id="thunderbird"] → $ws1
-assign [class="libreoffice"] → $ws5
-assign [app_id="evolution"] → $ws1
+assign [class="Brave-browser"] → $ws7
+assign [app_id="Brave-browser"] → $ws7
 
 # assign workspace to monitor
 #workspace $ws1 output eDP-1
