--- a/config/sway/sway.d/03_workspace.conf
+++ b/config/sway/sway.d/03_workspace.conf
@@ -1,20 +1,27 @@
 # Define names for workspaces
-set $ws1 "1:   Mail "
-set $ws2 "2:   Chat "
-set $ws3 "3:   Terminal "
-set $ws4 "4:   Terminal "
-set $ws5 "5:   Terminal "
-set $ws6 "6:   Code "
-set $ws7 "7:   Brave"
-set $ws8 "8:   Chat "
-set $ws9 "9:   Music"
-set $ws10 "10:   Calendar"
+set $ws1 " "
+set $ws2 " "
+set $ws3 " "
+set $ws4 " "
+set $ws5 " "
+set $ws6 " "
+set $ws7 " "
+set $ws8 " "
+set $ws9 ""
+set $ws10 " "
 
 # assign program to workspace
 assign [class="Brave-browser"] → $ws7
 assign [app_id="Brave-browser"] → $ws7
 
 # assign workspace to monitor
-#workspace $ws1 output eDP-1
-#workspace $ws2 output DP-4
-#workspace $ws3 output DP-5
+workspace $ws1 output "Lenovo Group Limited LEN L27i-28 0x0000715A"
+workspace $ws2 output "Lenovo Group Limited LEN L27i-28 0x0000715A"
+workspace $ws3 output "Lenovo Group Limited LEN L27i-28 0x0000715A"
+workspace $ws4 output "Lenovo Group Limited LEN L27i-28 0x0000714C"
+workspace $ws5 output "Lenovo Group Limited LEN L27i-28 0x0000714C"
+workspace $ws6 output "Lenovo Group Limited LEN L27i-28 0x0000714C"
+workspace $ws7 output "Lenovo Group Limited LEN L27i-28 0x0000714C"
+workspace $ws8 output "Lenovo Group Limited LEN L27i-28 0x0000714C"
+workspace $ws9 output eDP-1
+workspace $ws10 output eDP-1
