--- a/setup-01-arch-prerequirements.yml
+++ b/setup-01-arch-prerequirements.yml
@@ -37,4 +37,12 @@
             group: root
             mode: 0600
           become: true
+
+        - name: Install yay
+          kewlfft.aur.aur:
+            name: yay
+            use: makepkg
+            state: present
+          become: true
+          become_user: aur_builder
       when: ansible_distribution == 'Archlinux'
