--- a/config/sway/sway.d/02_output.conf
+++ b/config/sway/sway.d/02_output.conf
@@ -10,4 +10,4 @@
 # swaymsg output DP-7 pos 3840 0 res 1920x1080
 
 # https://wallpaperscraft.com/download/mushrooms_toadstools_glow_135444/3840x2160
-#output "*" background ~/Pictures/mushrooms_toadstools_glow_135444_3840x2160.jpg stretch
+output "*" background ~/Pictures/Wallpaper/mushrooms_toadstools_glow_135444_3840x2160.jpg stretch
