--- a/config/sway/sway.d/04_input.conf
+++ b/config/sway/sway.d/04_input.conf
@@ -2,13 +2,16 @@
 input type:touchpad {
         dwt enabled
         tap enabled
-        natural_scroll enabled
+        #natural_scroll enabled
+        natural_scroll disabled
         pointer_accel 0.3
         accel_profile adaptive
 }
 
+input type:keyboard xkb_layout "us"
+
 input "1:1:AT_Translated_Set_2_keyboard" {
-        xkb_layout de
+        xkb_layout us
 }
 
 input "1133:45081:MX_Master_2S_Mouse" {
