--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -5,7 +5,7 @@
 #####
 
 ## Launch // Toggle this Dialog // <><Shift> k ##
-bindsym $mod+Shift+k exec $BIN_DIR/toggle-program.sh remontoire
+#bindsym $mod+Shift+k exec $BIN_DIR/toggle-program.sh remontoire
 
 ## Launch // Terminal // <> Return ##
 bindsym $mod+Return exec $term
@@ -18,9 +18,6 @@ bindsym $mod+b exec $BIN_DIR/bemenu-run.sh dmenu | xargs swaymsg exec
 
 ## Launch // Toggle Gammastep // <><Shift> t ##
 bindsym $mod+Shift+t exec pkill -USR1 gammastep
-
-## Launch // Color Picker // <> c ##
-bindsym $mod+c exec $BIN_DIR/color-picker.sh
 
 ## Launch // Floating terminal // <Menu> ##
 bindsym Menu exec swaymsg "[title=$criteria] scratchpad show" || alacritty -t $criteria
@@ -42,6 +39,13 @@ bindsym XF86Mail exec evolution
 
 ## Launch // Browser // <XF86HomePage> ##
 bindsym XF86HomePage exec brave
+bindsym $mod+c exec brave --enable-features=UseOzonePlatform --ozone-platform=wayland
+
+## Launch // Email (via Brave) ##
+bindsym $mod+e exec brave --enable-features=UseOzonePlatform --ozone-platform=wayland --app=https://mail.google.com/
+
+## Launch // Calendar (via Brave) ##
+bindsym $mod+p exec brave --enable-features=UseOzonePlatform --ozone-platform=wayland --app=https://calendar.google.com/
 
 # Launch // ? // <XF86Search>
 #bindsym XF86Search exec
@@ -67,6 +71,12 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
+
+## Navigate // Relative Window // <> k j h l ##
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 ## Navigate // Workspaces 1-10 // <> 0..9 ##
 bindsym $mod+1 workspace $ws1
@@ -95,6 +105,12 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+## Modify // Window Position // <><Shift> k j h l ##
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
+
 ## Modify // Move Workspace to output // <><Alt> ↑ ↓ ← → ##
 bindsym $mod+Mod1+Down move workspace to output down
 bindsym $mod+Mod1+Up move workspace to output up
@@ -102,10 +118,10 @@ bindsym $mod+Mod1+Left move workspace to output left
 bindsym $mod+Mod1+Right move workspace to output right
 
 ## Modify // Split horizontal // <> h ##
-bindsym $mod+h splith
+bindsym $mod+$alt+h splith
 
 ## Modify // Split vertical // <> v ##
-bindsym $mod+v splitv
+bindsym $mod+$alt+v splitv
 
 ## Modify // Move window to workspace 1-10 // <><Shift> 0..9 ##
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -142,7 +158,7 @@ bindsym $mod+s move left; move right; layout stacking
 bindsym $mod+w move left; move right; layout tabbed
 
 ## Modify // Window Layout toggle split // <> e ##
-bindsym $mod+e move left; move right; layout toggle split
+bindsym $mod+Shift+e move left; move right; layout toggle split
 
 ## Modify // Window Fullscreen Toggle // <> f ##
 bindsym $mod+f fullscreen
@@ -157,7 +173,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 ## Modify // Focus parent container // <> a ##
-bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus parent
 
 ## Modify // Copy wayland clipboard to PRIAMRY // <Shift><Alt> s ##
 bindsym Shift+$alt+s exec wl-paste | xclip -selection clipboard | notify-send "PRIMARY Clipboard synced with Wayland"
@@ -175,7 +191,7 @@ bindsym $mod+u scratchpad show
 ## Show specific window in scratchpad via WM_CLASS; find out with xprop
 ## Scratchpad // Show KeePass2 from scratchpad // <> k ##
 #bindsym $mod+k [class = "KeePass2"] scratchpad show
-bindsym $mod+k [app_id = "org.keepassxc.KeePassXC"] scratchpad show
+#bindsym $mod+k [app_id = "org.keepassxc.KeePassXC"] scratchpad show
 
 #####
 # Session Management
@@ -188,10 +204,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+r exec swaymsg reload && systemctl --user restart kanshi
 
 ## Session // Lock screen // <> l ##
-bindsym $mod+l exec $lock
-
-## Session // System Mode // <><Shift> e ##
-bindsym $mod+Shift+e exec $BIN_DIR/dmenupower.sh
+bindsym $mod+a exec $lock
 
 #####
 # Window Resize and Gaps
@@ -200,10 +213,10 @@ bindsym $mod+Shift+e exec $BIN_DIR/dmenupower.sh
 ## Resize // Enter Resize Mode // <> r ##
 mode "Resize Mode" {
     ## Resize // Resize Window // ↑ ↓ ← → ##
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
+    bindsym h resize shrink width 10px
+    bindsym k resize grow height 10px
+    bindsym j resize shrink height 10px
+    bindsym l resize grow width 10px
 
     ## Resize // Exit Resize Mode // Escape or Enter ##
     bindsym Return mode "default"
