--- a/config/sway/sway.d/10_autostart.conf
+++ b/config/sway/sway.d/10_autostart.conf
@@ -1,7 +1,9 @@
 # Autostart
 exec alacritty -t swayTerm
 exec nm-applet --indicator
-exec /usr/bin/gammastep-indicator -l ${RS_LAT}:${RS_LON} -m wayland -t ${RS_DAY}:${RS_NIGHT}
+exec blueman-applet
+exec /usr/bin/gammastep-indicator
+exec systemctl --user start kanshi.service
 
 ## Enable it in your local sway config to get a clipboard manager via $mod+y
 # exec wl-paste -t text --watch myclipman.sh
