Further updates. - Templating gammastep and waybar. - Updates to Sway workspaces.

--- a/config/sway/sway.d/01_general.conf
+++ b/config/sway/sway.d/01_general.conf
@@ -27,7 +27,10 @@ set $term alacritty
 #set $menu nwggrid
 
 # bemenu
-set $menu j4-dmenu-desktop --dmenu="bemenu-run.sh -l 30" --term="alacritty" --no-generic
+#set $menu j4-dmenu-desktop --dmenu="bemenu-run.sh -l 30" --term="alacritty" --no-generic
+
+# wofi
+set $menu wofi
 
 # Prefered lock command
 set $lock $BIN_DIR/lock.sh
@@ -37,7 +40,7 @@ for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
 
 # Focus window when mouse hovers it
-focus_follows_mouse yes
+focus_follows_mouse no
 
 # Moves mouse to the newly created window
 mouse_warping none
