--- a/config/sway/sway.d/03_workspace.conf
+++ b/config/sway/sway.d/03_workspace.conf
@@ -1,7 +1,7 @@
 # Define names for workspaces
 set $ws1 " "
 set $ws2 " "
-set $ws3 " "
+set $ws3 " "
 set $ws4 " "
 set $ws5 " "
 set $ws6 " "
