--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -11,7 +11,7 @@
 bindsym $mod+Return exec $term
 
 ## Launch // Application Launcher // <> d ##
-bindsym $mod+d exec $menu
+bindsym $mod+space exec $menu
 
 ## Launch // Command Launcher // <> b ## bemenu
 bindsym $mod+b exec $BIN_DIR/bemenu-run.sh dmenu | xargs swaymsg exec
@@ -167,10 +167,10 @@ bindsym $mod+f fullscreen
 bindsym $mod+Shift+f focus parent; fullscreen; focus child
 
 ## Modify // Window Floating Toggle // <><Shift><Space> ##
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+BackSpace floating toggle
 
 ## Modify // Tile/Float Focus Toggle // <><Shift> t ##
-bindsym $mod+space focus mode_toggle
+#bindsym $mod+space focus mode_toggle
 
 ## Modify // Focus parent container // <> a ##
 bindsym $mod+Shift+a focus parent
