--- a/config/sway/sway.d/03_workspace.conf
+++ b/config/sway/sway.d/03_workspace.conf
@@ -1,14 +1,14 @@
 # Define names for workspaces
-set $ws1 " "
-set $ws2 " "
-set $ws3 " "
-set $ws4 " "
-set $ws5 " "
-set $ws6 " "
-set $ws7 " "
-set $ws8 " "
-set $ws9 ""
-set $ws10 " "
+set $ws1 "1:  "
+set $ws2 "2:  "
+set $ws3 "3:  "
+set $ws4 "4:  "
+set $ws5 "5:  "
+set $ws6 "6:  "
+set $ws7 "7:  "
+set $ws8 "8:  "
+set $ws9 "9: "
+set $ws10 "10:  "
 
 # assign program to workspace
 assign [class="Brave-browser"] → $ws7
