Define starship config and wf-recorder bindings

--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -299,6 +299,10 @@ bindsym $mod+Shift+Print exec /usr/share/sway/scripts/grimshot --notify save are
 ## Screenshot // Select window to screenshot // ## 
 #bindsym /usr/share/sway/scripts/grimshot save window - | swappy -f -
 
+## Capture screen recording using wf-recorder - WIP
+bindsym Ctrl+Print exec wf-recorder -f ~/Videos/wf-recorder/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4")
+bindsym Ctrl+Shift+BackSpace exec killall -s SIGINT wf-recorder
+
 #####
 # Notifications
 #####
