Fix screen recording key bindings

--- a/config/sway/sway.d/07_hotkeys.conf
+++ b/config/sway/sway.d/07_hotkeys.conf
@@ -299,9 +299,14 @@ bindsym $mod+Shift+Print exec /usr/share/sway/scripts/grimshot --notify save are
 ## Screenshot // Select window to screenshot // ## 
 #bindsym /usr/share/sway/scripts/grimshot save window - | swappy -f -
 
-## Capture screen recording using wf-recorder - WIP
-bindsym Ctrl+Print exec wf-recorder -f ~/Videos/wf-recorder/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4")
-bindsym Ctrl+Shift+BackSpace exec killall -s SIGINT wf-recorder
+## Capture screen recording using wf-recorder - Laptop screen
+bindsym $mod+F1 exec wf-recorder -o eDP-1 -f ~/Videos/wf-recorder/recording_$(date +"%Y-%m-%d_%H-%M-%S.mp4")
+## Capture screen recording using wf-recorder - Ext. screen #1
+bindsym $mod+F2 exec wf-recorder -o DP-5 -f ~/Videos/wf-recorder/recording_$(date +"%Y-%m-%d_%H-%M-%S.mp4")
+## Capture screen recording using wf-recorder - Ext. screen #2
+bindsym $mod+F3 exec wf-recorder -o DP-8 -f ~/Videos/wf-recorder/recording_$(date +"%Y-%m-%d_%H-%M-%S.mp4")
+## Kill screen recording
+bindsym $mod+F9 exec killall -s SIGINT wf-recorder
 
 #####
 # Notifications
